// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="MuiGrid-root makeStyles-root-1 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <img
      alt="Route Card"
      className="makeStyles-img-2"
    />
  </div>
  <div
    className="MuiGrid-root makeStyles-text-3 MuiGrid-item"
  >
    <h6
      className="MuiTypography-root MuiTypography-h6"
      data-testid="sample"
    />
  </div>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  className="MuiGrid-root makeStyles-root-1 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <img
      alt="Route Card"
      className="makeStyles-img-2"
      src="https://b.zmtcdn.com/webFrontend/64dffaa58ffa55a377cdf42b6a690e721585809275.png"
    />
  </div>
  <div
    className="MuiGrid-root makeStyles-text-3 MuiGrid-item"
  >
    <h6
      className="MuiTypography-root MuiTypography-h6"
      data-testid="sample"
    >
      Order Food Online
    </h6>
  </div>
</div>
`;
